--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
-voicechannel = 
-textchannel = 
+voicechannel = 757241990336348270
+textchannel = 757512781372194817
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
