--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 734268186366574727
+voicechannel = 
 textchannel = 734268186366574726
 ladderchannel = 
 jungsanchannel = 
