--- a/boss.ini
+++ b/boss.ini
@@ -1,128 +1,637 @@
-﻿----- 일반보스 -----
-bossname = 피코1채널
+-----일반보스-----
+bossname = 밀리아1
 gentime = 04:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
 
-bossname = 베르키1채널
-gentime = 03:50
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 라파커스 1채널
+bossname = 밀리아2
 gentime = 04:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
 
-bossname = 라빌린1채널
-gentime = 04:10
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 벨프스
+bossname = 이블린1
 gentime = 04:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
 
-bossname = 트로이카
-gentime = 03:50
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 이프리나
+bossname = 이블린2
 gentime = 04:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
 
-bossname = 베네딕트
-gentime = 04:10
+bossname = 라우디1
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
 
-bossname = 에르드1채널
-gentime = 07:50
+bossname = 라우디2
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
 
-bossname = 렌티1채널
-gentime = 07:50
+bossname = 라우디3
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
 
-bossname = 리비에1채널
-gentime = 08:00
+bossname = 린드르1
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
 
-bossname = 바르돌1채널
-gentime = 08:00
+bossname = 린드르2
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
 
-bossname = 도그록
-gentime = 08:00
+bossname = 린드르3
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
 
-bossname = 라카탄
-gentime = 07:50
+bossname = 칼리바1
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
 
-bossname = 페리라
+bossname = 칼리바2
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 칼리바3
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 베딘
 gentime = 08:10
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
 
-bossname = 마프르만
-gentime = 07:50
+bossname = 반디아스
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
 
-bossname = 세르마
-gentime = 08:00
+bossname = 키알
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
 
-bossname = 피코 2채널
-gentime = 04:00
+bossname = 에다
+gentime = 14:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
 
-bossname = 베르키2채널
-gentime = 03:50
+bossname = 이둔
+gentime = 14:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 티알피
+gentime = 15:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 키르니르
+gentime = 16:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 스노트라
+gentime = 24:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 카비라스
+gentime = 24:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 탄파나
+gentime = 24:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 파라크
+gentime = 10:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 다지안
+gentime = 10:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 프래머
+gentime = 10:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 보르트
+gentime = 10:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 베일드1
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 베일드2
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 비어디1
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 비어디2
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 브로아1
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 브로아2
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 리지아1
+gentime = 11:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 리지아2
+gentime = 11:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 트루삭1
+gentime = 11:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 트루삭2
+gentime = 11:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 아트1
+gentime = 11:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 아트2
+gentime = 11:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 스터즈1
+gentime = 10:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 스터즈2
+gentime = 10:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 코사크1 
+gentime = 10:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 코사크2
+gentime = 10:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 베딘
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 오르카
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 팬서
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 볼피
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 기셀라
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 델락
+gentime = 10:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 세티벨
+gentime = 10:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 바눌린
+gentime = 10:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 파스빌
+gentime = 10:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 셀피나
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 키리코
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 격돌케만
+gentime = 08:10
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 혈투벨프스
+gentime = 08:10
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 테라핌
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 소녀1평야
+gentime = 00:40
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 소녀1성체
+gentime = 00:40
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 소녀2평야
+gentime = 00:40
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 소녀2성체
+gentime = 00:40
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 소녀3평야
+gentime = 00:40
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 소녀3성체
+gentime = 00:40
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 두크라스
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 지프나크
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
+
+bossname = 카타스랄
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+kakaoOnOff = 1
 
 bossname = 라파커스2채널
 gentime = 04:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
+
+bossname = 피코1채널
+gentime = 04:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
+
+bossname = 라빌린1채널
+gentime = 04:10
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
+
+bossname = 베네딕트
+gentime = 04:10
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
+
+bossname = 트로이카
+gentime = 03:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
+
+bossname = 라카탄
+gentime = 07:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
+
+bossname = 렌티1채널
+gentime = 07:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
+
+bossname = 리비에1채널
+gentime = 08:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
+
+bossname = 세르마
+gentime = 08:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
+
+bossname = 베르키2채널
+gentime = 03:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
+
+bossname = 베르키1채널
+gentime = 03:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
+
+bossname = 바르돌1채널
+gentime = 08:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
+
+bossname = 벨프스
+gentime = 04:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
+
+bossname = 도그록
+gentime = 08:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
+
+bossname = 마프르만
+gentime = 07:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
+
+bossname = 라파커스1채널
+gentime = 04:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
+
+bossname = 피코2채널
+gentime = 04:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
 
 bossname = 라빌린2채널
 gentime = 04:10
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
 
+bossname = 이프리나
+gentime = 04:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
 
+bossname = 페리라
+gentime = 08:10
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
+
+bossname = 바르돌2채널
+gentime = 08:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
+
+bossname = 렌티2채널
+gentime = 07:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
+
+bossname = 에르드1채널
+gentime = 07:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
+
+bossname = 에르드2채널
+gentime = 07:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
+
+bossname = 리비에2채널
+gentime = 08:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+kakaoOnOff = 1
