--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 758510530225897483
 textchannel = 758356332138594354
 ladderchannel = 
 jungsanchannel = 
