--- a/boss.ini
+++ b/boss.ini
@@ -222,3 +222,50 @@ nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요.
 
+bossname = 2섭팬서
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+
+bossname = 5섭팬서
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+
+bossname = 2섭오르카
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+
+bossname = 5섭오르카
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+
+bossname = 2섭기셀라
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+
+bossname = 5섭기셀라
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+
+bossname = 2섭볼피
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
+
+bossname = 5섭볼피
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요.
